--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -15,6 +15,8 @@ hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
 
+google_maps_api_key: "AIzaSyAvVVjS2Z4cZSfHE3tdjnwNXP5yPLBleJs"
+
 ############################
 ## MODULES
 ############################
