--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -91,7 +91,7 @@ features:
       index_name: ''
       show_logo: false
   map:
-    provider: 'google'
+    provider: ''
     api_key: ''
     zoom: 15
 
