--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,8 @@
 # Appearance
 
 appearance:
-  theme_day: ocean
-  theme_night: ocean
+  theme_day: earth
+  theme_night: ''
   font: minimal
   font_size: L
 
@@ -34,10 +34,10 @@ header:
     enable: true
     align: l
     show_logo: true
-    show_language: false
-    show_day_night: true
+    show_language: true
+    show_day_night: false
     show_search: true
-    highlight_active_link: true
+    highlight_active_link: false
 
 # Site footer
 
