--- a/config/_default/menus.fr.yaml
+++ b/config/_default/menus.fr.yaml
@@ -17,10 +17,10 @@ main:
 #    url: '#talks'
 #    weight: 40
   - name: Publications
-    url: '#publications'
+    url: 'publications'
     weight: 20
   - name: Contact
-    url: '#contact'
+    url: 'contact'
     weight: 30
 
 # Link to a PDF of your resume/CV from the menu.
