--- a/config/_default/menus.fr.yaml
+++ b/config/_default/menus.fr.yaml
@@ -13,15 +13,15 @@ main:
 #  - name: Projects
 #    url: '#projects'
 #    weight: 30
-#  - name: Talks
-#    url: '#talks'
-#    weight: 40
+  - name: Présentations
+    url: 'présentations'
+    weight: 30
   - name: Publications
     url: 'publications'
     weight: 20
   - name: Contact
     url: 'contact'
-    weight: 30
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
